move spark documents to spark-app