@@ -155,21 +155,21 @@
     </repositories>
 
     <profiles>
-        <!--        <profile>-->
-        <!--            <id>JDK9+</id>-->
-        <!--            <activation>-->
-        <!--                <jdk>[9,)</jdk>-->
-        <!--            </activation>-->
-        <!--            <properties>-->
-        <!--                <maven.compiler.release>8</maven.compiler.release> &lt;!&ndash; release is added in java 9 &ndash;&gt;-->
-        <!--                <argLine>-->
-        <!--                    &#45;&#45;add-opens java.base/java.net=ALL-UNNAMED-->
-        <!--                    &#45;&#45;add-opens java.base/sun.net=ALL-UNNAMED-->
-        <!--                    &#45;&#45;add-opens java.security.jgss/sun.security.krb5=ALL-UNNAMED &lt;!&ndash; Because of HBase client &ndash;&gt;-->
-        <!--                    &#45;&#45;add-opens java.base/java.nio=ALL-UNNAMED &lt;!&ndash; Because of HBase client &ndash;&gt;-->
-        <!--                </argLine>-->
-        <!--            </properties>-->
-        <!--        </profile>-->
+        <profile>
+            <id>JDK9+</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.release>8</maven.compiler.release> <!-- release is added in java 9 -->
+                <argLine>
+                    --add-opens java.base/java.net=ALL-UNNAMED
+                    --add-opens java.base/sun.net=ALL-UNNAMED
+                    --add-opens java.security.jgss/sun.security.krb5=ALL-UNNAMED <!-- Because of HBase client -->
+                    --add-opens java.base/java.nio=ALL-UNNAMED <!-- Because of HBase client -->
+                </argLine>
+            </properties>
+        </profile>
     </profiles>
 
 
